# NotedThat

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  RELEASING.md  SPECIFICATIONS.md  docker-compose.yml  opencode.json  release-plz.toml  renovate.json
.github/workflows/: ci.yml  docker.yml  publish-crate-initial.yml  publish-crate-manual.yml  publish-crates.yml  release.yml
.sisyphus/evidence/: task-20-tree.txt
crates/notedthat-api-http/: Cargo.toml  README.md
crates/notedthat-api-http/src/: error.rs  lib.rs  middleware.rs  router.rs  search_route.rs  state.rs  testing.rs  write_path.rs
crates/notedthat-api-http/tests/: handlers.rs  it_compiles.rs  search_e2e.rs  search_route.rs
crates/notedthat-core/: Cargo.toml  README.md
crates/notedthat-core/src/: auth.rs  bucket_name.rs  conditional.rs  error.rs  kb.rs  lib.rs  object_path.rs  range.rs  slug.rs  storage.rs
crates/notedthat-core/src/search/: error.rs  filter.rs  hit.rs  mod.rs  object_key.rs  request.rs  response.rs
crates/notedthat-indexer/: Cargo.toml  README.md
crates/notedthat-indexer/src/: chunker.rs  embedder.rs  event.rs  lib.rs  provisioner.rs  qdrant.rs  worker.rs
crates/notedthat-indexer/src/embedder/: openai.rs
crates/notedthat-indexer/src/searcher/: filter.rs  hybrid.rs  mod.rs  preview.rs
crates/notedthat-indexer/tests/: chunker_robustness.rs  provisioner_integration.rs  searcher_integration.rs  worker_integration.rs
crates/notedthat-mcp/: Cargo.toml  README.md
crates/notedthat-mcp-stdio/: Cargo.toml  README.md
crates/notedthat-mcp-stdio/src/: lib.rs  main.rs
crates/notedthat-mcp-stdio/tests/: env_validation.rs  it_compiles.rs  mcp_cross_surface_e2e.rs  mcp_e2e.rs  stdio_purity.rs
crates/notedthat-mcp/src/: auth.rs  client.rs  error.rs  http.rs  lib.rs  path.rs  resources_list.rs  resources_read.rs  sse_refusal.rs
crates/notedthat-mcp/src/resources_list/: tests.rs
crates/notedthat-mcp/src/tools/: append.rs  delete.rs  edit.rs  list.rs  list_kbs.rs  mod.rs  mv.rs  read.rs  replace.rs  search.rs  write.rs
crates/notedthat-mcp/tests/: m8_http_transport_resources_contracts.rs
crates/notedthat-server/: Cargo.toml  README.md  build.rs
crates/notedthat-server/src/: config.rs  lib.rs  main.rs  provision.rs  run.rs  tracing_init.rs
crates/notedthat-server/src/run/: mcp_http.rs  mcp_http_listener.rs
crates/notedthat-server/tests/: e2e.rs  it_line_range_read.rs  it_patch.rs  it_replace.rs  mcp_http_cross_surface_e2e.rs  mcp_stdio_binary.rs  webdav_cross_surface_e2e.rs
crates/notedthat-server/tests/support/: line_range_env.rs  patch_backends.rs  patch_env.rs
crates/notedthat-storage-s3/: Cargo.toml  README.md
crates/notedthat-storage-s3/src/: config.rs  lib.rs  storage.rs
crates/notedthat-storage-s3/tests/: integration.rs
crates/notedthat-webdav/: Cargo.toml  README.md
crates/notedthat-webdav/src/: file.rs  filesystem.rs  lib.rs  metadata.rs  middleware.rs  router.rs  state.rs
crates/notedthat-webdav/tests/: middleware_integration.rs  webdav_integration.rs
crates/notedthat-write/: Cargo.toml
crates/notedthat-write/src/: commit.rs  error.rs  lib.rs  mime.rs  patch.rs  replace.rs
crates/notedthat-write/src/patch/: indexing.rs
crates/notedthat-write/src/patch/tests/: retry.rs  skeleton.rs  support.rs
crates/notedthat-write/src/replace/: tests.rs
crates/notedthat-write/src/replace/tests/: companion.rs  match_splice.rs  retry.rs  support.rs
crates/notedthat-write/src/replace/tests/support/: runner.rs
crates/notedthat-write/tests/: it_compiles.rs
docker/: seaweedfs-s3-config.json
docs/: API.md  CONFIGURATION.md
docs/manual-qa/: webdav-gvfs.sh
