# M1: Workspace skeleton only — all crate members are placeholders.
# Real dependencies land in M2+ when implementation begins.

[workspace]
resolver = "2"
members = [
  "crates/notedthat-core",
  "crates/notedthat-storage-s3",
  "crates/notedthat-indexer",
  "crates/notedthat-api-http",
  "crates/notedthat-webdav",
  "crates/notedthat-mcp",
  "crates/notedthat-server",
  "crates/notedthat-mcp-stdio",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/NotedThat/NotedThat"
homepage = "https://github.com/NotedThat/NotedThat"
authors = ["NotedThat Contributors"]

# Populated in M2. Features left minimal here; crates opt into features they need.
[workspace.dependencies]
# Async runtime & primitives
tokio = { version = "1", default-features = false }
async-trait = "0.1.89"
bytes = "1.12"
futures = "0.3"

# HTTP layer
axum = { version = "0.8", default-features = false }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", default-features = false }
http = "1"

# S3
aws-sdk-s3 = { version = "1.137", default-features = false, features = ["rt-tokio", "http-1x", "default-https-client"] }
aws-config = { version = "1.1", default-features = false, features = ["behavior-version-latest"] }
aws-smithy-runtime-api = "1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

# Errors
thiserror = "2.0"
anyhow = "1"

# Security & IDs
subtle = "2.4"
uuid = { version = "1.6", default-features = false, features = ["v7"] }

# Testing
testcontainers = "0.27"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
# Groups at priority -1 so individual allows (priority 0) override them.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# --- Selective allows: pedantic group ---
# Reason: Names like event::EventType are standard Rust patterns
module_name_repetitions = "allow"
# Reason: Placeholder code has no real error docs yet
missing_errors_doc = "allow"
# Reason: Placeholder code has no real panic docs yet
missing_panics_doc = "allow"
# Reason: Placeholder code has no meaningful return values yet
must_use_candidate = "allow"
