# M1: Workspace skeleton only — all crate members are placeholders.
# Real dependencies land in M2+ when implementation begins.

[workspace]
resolver = "2"
members = [
  "crates/notedthat-core",
  "crates/notedthat-storage-s3",
  "crates/notedthat-indexer",
  "crates/notedthat-write",
  "crates/notedthat-api-http",
  "crates/notedthat-webdav",
  "crates/notedthat-mcp",
  "crates/notedthat-server",
  "crates/notedthat-mcp-stdio",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/NotedThat/NotedThat"
homepage = "https://github.com/NotedThat/NotedThat"
authors = ["NotedThat Contributors"]

# Populated in M2. Features left minimal here; crates opt into features they need.
[workspace.dependencies]
# Workspace crates
notedthat-core = { path = "crates/notedthat-core", version = "0.1.1" }
notedthat-indexer = { path = "crates/notedthat-indexer", version = "0.1.1" }
notedthat-write = { path = "crates/notedthat-write", version = "0.1.1" }

# MCP
rmcp = { version = "2.1.0", features = ["server", "macros", "schemars", "transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session"] }
schemars = { version = "1.2", features = ["derive"] }
percent-encoding = "2"
url = "2"

# Async runtime & primitives
tokio = { version = "1", default-features = false }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1.89"
bytes = "1.12"
futures = "0.3"
pulldown-cmark = { version = "0.13", default-features = false }

# HTTP layer
axum = { version = "0.8", default-features = false }
axum-extra = { version = "0.10", features = ["typed-header"] }
base64 = "0.22"
dav-server = { version = "0.11", default-features = false }
headers = "0.4"
hex = "0.4"
httpdate = "1.0"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", default-features = false }
http = "1"

# S3
aws-sdk-s3 = { version = "1.137", default-features = false, features = ["rt-tokio", "http-1x", "default-https-client"] }
aws-config = { version = "1.1", default-features = false, features = ["behavior-version-latest"] }
aws-smithy-runtime-api = "1"

# Vector DB
qdrant-client = { version = "1.15", default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }

# Errors
thiserror = "2.0"
anyhow = "1"

# Text processing
text-splitter = { version = "0.32", features = ["markdown"] }

# Security & IDs
subtle = "2.4"
sha2 = "0.10"
uuid = { version = "1.6", default-features = false, features = ["v7"] }

# Testing
testcontainers = "0.27"
wiremock = "0.6"

# cargo-dist configuration — drives .github/workflows/release.yml.
# Only crates that opt in via [package.metadata.dist] dist = true are packaged
# (currently: notedthat-server, notedthat-mcp-stdio). Everything else is a
# library crate and stays library-only.
[workspace.metadata.dist]
cargo-dist-version = "0.32.0"
allow-dirty = ["ci"]
ci = ["github"]
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-unknown-linux-musl",
  "aarch64-unknown-linux-musl",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-pc-windows-msvc",
  "aarch64-pc-windows-msvc",
]
installers = ["shell", "powershell"]
windows-archive = ".zip"
unix-archive = ".tar.xz"
checksum = "sha256"
build-local-artifacts = false
publish-prereleases = false
announce-in-tag = true

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
# Groups at priority -1 so individual allows (priority 0) override them.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# --- Selective allows: pedantic group ---
# Reason: Names like event::EventType are standard Rust patterns
module_name_repetitions = "allow"
# Reason: Placeholder code has no real error docs yet
missing_errors_doc = "allow"
# Reason: Placeholder code has no real panic docs yet
missing_panics_doc = "allow"
# Reason: Placeholder code has no meaningful return values yet
must_use_candidate = "allow"
