[package]
name = "notedthat-api-http"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP API surface for NotedThat (axum-based in later milestones; placeholder in M1)"
readme = "README.md"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
