[package]
name = "notedthat-api-http"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP API surface for NotedThat"
homepage.workspace = true
authors.workspace = true

[features]
test-support = []

[dependencies]
notedthat-core = { path = "../notedthat-core", version = "0.1.4" }
notedthat-indexer = { path = "../notedthat-indexer", version = "0.1.4" }
notedthat-write = { workspace = true }
async-trait.workspace = true
axum = { workspace = true, features = ["http1", "json", "query", "tokio"] }
bytes.workspace = true
hex.workspace = true
http.workspace = true
httpdate.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
tokio = { workspace = true, features = ["sync"] }
tower.workspace = true
tower-http = { workspace = true, features = ["request-id", "trace"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v7"] }
thiserror.workspace = true

[dev-dependencies]
notedthat-api-http = { path = ".", features = ["test-support"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
testcontainers = { workspace = true }
wiremock = { workspace = true }
qdrant-client = { workspace = true }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
