[package]
name = "notedthat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared domain types, path/range/error/auth primitives, config for NotedThat"
readme = "README.md"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
