[package]
name = "notedthat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared domain types, path/range/error/auth primitives, config for NotedThat"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
bytes.workspace = true
http.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
subtle.workspace = true
tracing.workspace = true

[lints]
workspace = true
