[package]
name = "notedthat-mcp-stdio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP-over-stdio transport adapter for NotedThat"
readme = "README.md"

[[bin]]
name = "notedthat-mcp-stdio"
path = "src/main.rs"

[dependencies]
notedthat-mcp = { path = "../notedthat-mcp" }
rmcp = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
serde_json = { workspace = true }

[lints]
workspace = true
