[package]
name = "notedthat-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP tool schemas and HTTP-backed implementation for NotedThat (rmcp-based in later milestones; placeholder in M1)"
readme = "README.md"

[lib]
path = "src/lib.rs"

[lints]
workspace = true
