[package]
name = "notedthat-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP tool schemas and HTTP-backed implementation for NotedThat"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
rmcp = { workspace = true }
axum = { workspace = true, features = ["http1", "json", "tokio"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
percent-encoding = { workspace = true }
url = { workspace = true }
notedthat-core = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true }

[lints]
workspace = true
