[package]
name = "notedthat-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
notedthat-core = { path = "../notedthat-core", version = "0.1.1" }
notedthat-storage-s3 = { path = "../notedthat-storage-s3", version = "0.1.1" }
notedthat-api-http = { path = "../notedthat-api-http", version = "0.1.1" }
notedthat-webdav = { path = "../notedthat-webdav", version = "0.1.1" }
notedthat-indexer = { path = "../notedthat-indexer" }
notedthat-mcp = { path = "../notedthat-mcp" }  # M8 deliberate dependency extension — see plan §W1.3
notedthat-write = { path = "../notedthat-write", version = "0.1.1" }
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["http1", "tokio"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { workspace = true }
tower.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "fmt", "json"] }
thiserror.workspace = true

[[bin]]
name = "notedthat-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

# Opt into cargo-dist packaging. Ships `notedthat-server` binary for every
# target listed in [workspace.metadata.dist]. See .github/workflows/release.yml.
[package.metadata.dist]
dist = true

[dev-dependencies]
notedthat-api-http = { path = "../notedthat-api-http", version = "0.1.1", features = ["test-support"] }
notedthat-mcp-stdio = { path = "../notedthat-mcp-stdio", version = "0.1.1" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
testcontainers.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde_json.workspace = true
temp-env = "0.3"
wiremock.workspace = true
base64.workspace = true

[lints]
workspace = true
