[package]
name = "notedthat-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "NotedThat server binary — HTTP API, WebDAV, and remote MCP in one process"
homepage.workspace = true
authors.workspace = true

[dependencies]
notedthat-core = { path = "../notedthat-core", version = "0.1.3" }
notedthat-storage-s3 = { path = "../notedthat-storage-s3", version = "0.1.3" }
notedthat-api-http = { path = "../notedthat-api-http", version = "0.1.3" }
notedthat-webdav = { path = "../notedthat-webdav", version = "0.1.3" }
notedthat-indexer = { path = "../notedthat-indexer", version = "0.1.3" }
notedthat-mcp = { path = "../notedthat-mcp", version = "0.1.3" }  # M8 deliberate dependency extension — see plan §W1.3
notedthat-write = { path = "../notedthat-write", version = "0.1.3" }
anyhow.workspace = true
async-trait.workspace = true
axum = { workspace = true, features = ["http1", "tokio"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { workspace = true }
tower.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "fmt", "json"] }
thiserror.workspace = true

[[bin]]
name = "notedthat-server"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

# Opt into cargo-dist packaging. Ships `notedthat-server` binary for every
# target listed in [workspace.metadata.dist]. See .github/workflows/release.yml.
[package.metadata.dist]
dist = true

[dev-dependencies]
notedthat-api-http = { path = "../notedthat-api-http", version = "0.1.3", features = ["test-support"] }
notedthat-mcp-stdio = { path = "../notedthat-mcp-stdio", version = "0.1.3" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
testcontainers.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde_json.workspace = true
temp-env = "0.3"
wiremock.workspace = true
base64.workspace = true

[lints]
workspace = true
