[package]
name = "notedthat-webdav"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebDAV surface for NotedThat"
readme = "README.md"

[dependencies]
dav-server = { workspace = true, default-features = false }
notedthat-core = { workspace = true }
notedthat-indexer = { workspace = true }
notedthat-write = { workspace = true }
axum = { workspace = true, features = ["http1", "tokio"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["request-id", "trace"] }
tokio = { workspace = true, features = ["sync"] }
bytes = { workspace = true }
base64 = { workspace = true }
percent-encoding = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v7"] }

[lib]
path = "src/lib.rs"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time"] }
testcontainers = { workspace = true }
reqwest = { workspace = true }
notedthat-storage-s3 = { path = "../notedthat-storage-s3", version = "0.1.5" }

[lints]
workspace = true
