[package]
name = "notedthat-write"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared write path (commit, patch, replace) for NotedThat HTTP API and WebDAV surfaces"
homepage.workspace = true
authors.workspace = true

[dependencies]
notedthat-core = { workspace = true }
notedthat-indexer = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lib]
path = "src/lib.rs"

[lints]
workspace = true
